# ChangeLog for net-mail/freepops
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/freepops/ChangeLog,v 1.1 2004/09/17 00:05:04 vapier Exp $

*freepops-0.0.16 (16 Sep 2004)

  16 Sep 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Marco Testarmata #54917.