@@ -1,0 +1,2 @@
+MD5 938a60c001d52e0b7b17cbba820fe068 freepops-0.0.17.tar.gz 1653657
+MD5 91275954261c8918c18ed1e8ee22a240 0.0.17-yahoo.lua 28530
