@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/freepops
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/freepops/ChangeLog,v 1.1 2004/09/17 00:05:04 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/freepops/ChangeLog,v 1.2 2004/09/22 14:11:25 squinky86 Exp $
+
+*freepops-0.0.17 (22 Sep 2004)
+
+  22 Sep 2004; Jon Hood <squinky86@gentoo.org> +freepops-0.0.17.ebuild:
+  Version bump with fixed yahoo lua.
 
 *freepops-0.0.16 (16 Sep 2004)
 
